@@ -45,7 +45,7 @@
 
 namespace dmcs {
 
-typedef MessagingGateway<PartialBeliefState, Conflict> MessagingGatewayBC;
+typedef MessagingGateway<PartialBeliefState, Decisionlevel, Conflict> MessagingGatewayBC;
 typedef boost::shared_ptr<MessagingGatewayBC> MessagingGatewayBCPtr;
 
 class ConcurrentMessageQueueFactory : private boost::noncopyable
